@@ -21,8 +21,6 @@ package org.apache.jena.sparql.engine.iterator;
 import static org.junit.Assert.assertEquals;
 
 import java.util.*;
-import java.util.stream.Collectors ;
-
 import org.apache.jena.atlas.iterator.Iter ;
 import org.apache.jena.graph.NodeFactory ;
 import org.apache.jena.sparql.core.Var ;
@@ -44,7 +42,7 @@ public abstract class AbstractTestDistinctReduced {
     private static List<Binding> build(List<String> items) {
         return items.stream().sequential()
                 .map((s)-> BindingFactory.binding(var_a, NodeFactory.createLiteralString(s)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     protected abstract QueryIterator createQueryIter(List<Binding> data) ;
